# TAED2_DataExplorers

./: Makefile  README.md  data.dvc  dvc.yaml  pyproject.toml
.dvc/: config
data/processed/: .gitignore  x_pred.npy.dvc  x_prova.npy  x_test.npy.dvc  x_train.npy.dvc  y_prova.npy  y_test.npy.dvc  y_train.npy.dvc
data/raw/: .gitignore  seg_pred.dvc  seg_test.dvc  seg_train.dvc
docs/: dataset_card.md  mkdocs.yml  model_card.md
docs/docs/: index.md
image_classification/: __init__.py
image_classification/modeling/: predict.py
metrics/: emissions.csv  scores.json
mlruns/0/: meta.yaml
mlruns/586854847108043828/: meta.yaml
mlruns/586854847108043828/64a7b00cd1c8447aa08ef7ad0756f446/: meta.yaml
mlruns/880038647904291264/: meta.yaml
models/: model.h5.dvc
notebooks/: code-carbon-execution.ipynb  code-carbon-label-execution.ipynb
pipeline/: preprocessing.py
pipeline/models/: train.py
reports/: coverage_index.html
reports/code_coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_config_py.html  z_defad1a87623d8bf_evaluate_py.html  z_defad1a87623d8bf_train_py.html  z_e3d496e5189f5be2_preprocessing_py.html  z_ff93792cf40911da_api_py.html
src/app/: api.py
src/features/: deepchecks_validation.py  preprocessing.py
src/models/: evaluate.py  train.py
taed2_dataexplorers/: dataset.py  features.py  plots.py
taed2_dataexplorers/modeling/: train.py
tests/: test_api.py  test_evaluate.py  test_models.py  test_preprocessing.py  test_train.py
(+31 files in other folders)
