[project]
name = "taed2_dataexplorers"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "DataExplorers" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["taed2_dataexplorers"]
force_sort_within_sections = true

[tool.poetry]
name = "taed2-dataexplorers"
version = "0.1.0"
description = ""
authors = ["DataExplorers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "<2.2.2"
numpy = "^2.1.1"
scikit-learn = "<1.6.0"
dvc = "^3.55.2"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
mlflow = "^2.17.0"
codecarbon = "^2.7.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.7"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
addopts = "--junitxml=out/tests-report.xml --cov=src --cov-report=html:reports/coverage"
